@@ -1,7 +1,7 @@
 package com.drajer.routing;
 
+import com.drajer.ecrapp.security.AuthorizationService;
 import com.drajer.sof.model.LaunchDetails;
-import java.lang.reflect.Method;
 import org.apache.http.client.utils.URIBuilder;
 import org.json.JSONObject;
 import org.slf4j.Logger;
@@ -32,10 +32,10 @@ public class RestApiSender {
       logger.info("IN INitialization");
 
       if (!authServiceImplClassName.isEmpty()) {
-        Class classInstance = Class.forName(authServiceImplClassName);
-        Method authMethod = classInstance.getMethod("getAuthorizationHeader", LaunchDetails.class);
-        logger.info(authMethod.getName());
-        access_token = (String) authMethod.invoke(classInstance.newInstance(), launchDetails);
+        Class<?> clazz = Class.forName(authServiceImplClassName);
+        AuthorizationService authService =
+            (AuthorizationService) clazz.getConstructor().newInstance();
+        access_token = authService.getAuthorizationHeader(launchDetails);
       }
 
       RestTemplate restTemplate = new RestTemplate();
@@ -43,7 +43,7 @@ public class RestApiSender {
       headers.add("Content-Type", MediaType.APPLICATION_XML_VALUE);
       headers.add("X-Request-ID", launchDetails.getxRequestId());
 
-      if (!access_token.isEmpty() && access_token != null) {
+      if (access_token != null && !access_token.isEmpty()) {
         logger.info("Setting Access_token============>" + access_token);
         headers.add("Authorization", access_token);
       }
